--- a/toolkit/bridge/pallet/Cargo.toml
+++ b/toolkit/bridge/pallet/Cargo.toml
@@ -15,6 +15,7 @@ parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
 sidechain-domain = { workspace = true }
 sp-partner-chains-bridge = { workspace = true }
+sp-core = { workspace = true, optional = true }
 
 [dev-dependencies]
 sp-core = { workspace = true }
@@ -40,5 +41,6 @@ runtime-benchmarks = [
     "frame-benchmarking/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
+    "dep:sp-core"
 ]
 mock = []
