--- a/toolkit/smart-contracts/commands/Cargo.toml
+++ b/toolkit/smart-contracts/commands/Cargo.toml
@@ -20,6 +20,7 @@ tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 anyhow = { workspace = true }
+sp-runtime = { workspace = true, features = ["std"] }
 
 [dev-dependencies]
 hex-literal = { workspace = true }
