remove native token management crates

--- a/toolkit/data-sources/mock/Cargo.toml
+++ b/toolkit/data-sources/mock/Cargo.toml
@@ -23,7 +23,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 sidechain-domain = { workspace = true }
 sp-timestamp = { workspace = true }
-sp-native-token-management = { workspace = true, optional = true }
 sp-governed-map = { workspace = true, optional = true }
 sidechain-mc-hash = { workspace = true, optional = true }
 sp-block-participation = { workspace = true, optional = true }
@@ -32,12 +31,11 @@ authority-selection-inherents = { workspace = true, optional = true }
 sp-partner-chains-bridge = { workspace = true, optional = true }
 
 [features]
-default = ["std", "block-source", "candidate-source", "governed-map", "native-token"]
+default = ["std", "block-source", "candidate-source", "governed-map"]
 std = [
 	"serde_json/std",
 	"sidechain-domain/std",
 	"rand/std",
-	"sp-native-token-management?/std",
 	"sp-block-participation?/std",
 	"sp-governed-map/std",
 	"authority-selection-inherents?/std"
@@ -45,7 +43,6 @@ std = [
 block-source = []
 candidate-source = ["authority-selection-inherents"]
 governed-map = ["sp-governed-map"]
-native-token = ["sp-native-token-management"]
 mc-hash = ["sidechain-mc-hash"]
 sidechain-rpc = ["pallet-sidechain-rpc"]
 block-participation = ["sp-block-participation"]
