remove pallet-partner-chains-session

--- a/toolkit/committee-selection/pallet/Cargo.toml
+++ b/toolkit/committee-selection/pallet/Cargo.toml
@@ -29,7 +29,7 @@ sp-io = { workspace = true }
 sidechain-domain = { workspace = true }
 derive-new = { workspace = true }
 pallet-session = { workspace = true }
-pallet-partner-chains-session = { workspace = true }
+sp-staking = { workspace = true }
 
 [dev-dependencies]
 sp-io = { workspace = true }
@@ -51,6 +51,6 @@ std = [
     "sidechain-domain/serde",
     "derive-new/std",
     "pallet-session/std",
-    "pallet-partner-chains-session/std",
+    "sp-staking/std",
 ]
 try-runtime = ["frame-support/try-runtime"]
